--- a/vignettes/Development/Quality control/bugfixes_SimpleBox4Nano.Rmd
+++ b/vignettes/Development/Quality control/bugfixes_SimpleBox4Nano.Rmd
@@ -29,5 +29,6 @@ knitr::opts_chunk$set(echo = TRUE)
 - Heteroagglomeration input data was different than Excel version, this is changed. 
 - Net sedimentation rate for continetal scale was 0, this is changed. 
 - Correction factor variable (FracROWatComp) introduced to mimic the correction factor in the runoff term in Excel. 
+- Fixed input data for nTIO_10nm, had multiple discrepancies
 
 Note, the working branch in SBOO VDR_constantdeprate, has a constant deposition rate instead of the function that is implemented in SBOO to facilitate comparison. 
