--- a/vignettes/Development/Quality control/Development_Valerie.Rmd
+++ b/vignettes/Development/Quality control/Development_Valerie.Rmd
@@ -455,3 +455,188 @@ k_Fragmentation <- function(kmpdeg, kfrag, SubCompartName, ScaleName){
 }
 
 ```
+
+## Adding Shape Factors to SimpleBox4Plastic
+
+After testing, improvements could be made to the
+SimpleBox4Plastic. The first improvement made was the
+implementation of shape factors for Settling Velocity. This
+is based on several theoretical approximations, as discussed
+in other documents. I made the following adjustments to the
+code in different parts of the SimpleBox Implementation.
+Initially, settling velocity calculation was relatively
+straightforward, through the following code line:
+
+```{r Initial Settling Velocity, eval = FALSE }
+ switch (Matrix,
+          "water" = {
+            if(SubCompartName == "cloudwater") return(NA)
+            2*(rad_species^2*(rho_species-rhoMatrix)*GN) / (9*DynViscWaterStandard)
+            return(v_s)
+          }, 
+         NA 
+ )
+
+```
+
+This has now changed into the following to correct for the
+shape factors:
+
+```{r New Settling Velocity, eval = FALSE}
+switch (Matrix,
+          "water" = {
+            if(SubCompartName == "cloudwater") return(NA)
+            volume <- fVol(rad_species, Shape = NULL, Longest_side, Intermediate_side, Shortest_side)
+            d_eq <- ( 6/ pi * volume)^(1/3)
+            surfaceareaparticle <- f_SurfaceArea(Shape = NULL, Longest_side, Intermediate_side, Shortest_side)
+            surfaceareaperfectsphere <- f_SurfaceArea("Sphere", d_eq, d_eq, d_eq)
+            circularity <- Longest_side*Intermediate_side / (d_eq*d_eq)
+            sphericity <- surfaceareaperfectsphere/surfaceareaparticle
+            Psi <- sphericity/circularity # Shape factor Dioguardi
+            CSF <- sqrt(Shortest_side/(Longest_side*Intermediate_side))
+            #DragMethod <- "Stokes"
+            v_s <- f_SetVelSolver(d_eq, Psi, DynViscWaterStandard, rho_species, rhoMatrix, DragMethod, CSF)
+            return(v_s)
+            # 2*(rad_species^2*(rho_species-rhoMatrix)*GN) / (9*DynViscWaterStandard)
+          },
+        NA
+)
+
+```
+
+To accurately calculate the new parameters, the following
+scripts have been introduced:
+
+```{r F_Vol, eval = FALSE}
+fVol <- function(rad_particle, Shape = NULL, Longest_side = NULL, Intermediate_side = NULL, Shortest_side = NULL){
+    if (is.null(Shape) || is.na(Shape)){
+      Shape <- "Default"
+    }
+    
+    # Check if any of the sides is NA or NULL and assign default values if so
+    if (is.na(Longest_side) || is.null(Longest_side) || is.na(Intermediate_side) || is.null(Intermediate_side) || is.na(Shortest_side) || is.null(Shortest_side)) {
+      Longest_side <- rad_particle * 2
+      Intermediate_side <- rad_particle * 2
+      Shortest_side <- rad_particle * 2
+    }
+
+      if (Shape == "Sphere" | Shape == "Default") {
+        radius <- Longest_side / 2
+        volume <- (4/3) * pi * radius^3
+        return(volume)
+      } else if (Shape == "Ellipsoid") {
+        volume <- (4/3) * pi * Longest_side * Intermediate_side * Shortest_side
+        return(volume)
+      } else if (Shape == "Cube" | Shape == "Box") {
+        #Longest_side <- sqrt(3)*Longest_side
+        #Intermediate_side <-sqrt(2)*Longest_side
+        volume <- Longest_side * Intermediate_side * Shortest_side
+        return(volume)
+      } else if (Shape == "Cylindric - circular") {
+        
+        radius <- Longest_side / 2
+        height <- Intermediate_side
+        volume <- pi * radius^2 * height
+        return(volume)
+      } else if (Shape == "Cylindric - elliptic") {
+        radius_major <- Longest_side / 2
+        radius_minor <- Intermediate_side / 2
+        height <- Shortest_side
+        volume <- pi * radius_major * radius_minor * height
+        return(volume)
+      } else {
+        return("Invalid Shape! Please choose from Sphere, Ellipsoid, Cube, Box, Cylindric - circular, or Cylindric - elliptic.")
+      }
+}
+
+```
+
+```{r Surface Area, eval = FALSE}
+f_SurfaceArea <- function(Shape, Longest_side = NULL, Intermediate_side = NULL, Shortest_side = NULL) {
+  if (is.null(Shape)){
+    Shape <- "Default"
+  }
+  if (is.null(Longest_side) | is.null(Intermediate_side) | is.null(Shortest_side)) {
+    # If any side is not provided, assuming all sides are equal (default)
+    Longest_side <- rad_particle*2
+    Intermediate_side <- rad_particle*2
+    Shortest_side <- rad_particle*2
+  }
+  
+    if (Shape == "Sphere" | Shape == "Default") {
+      radius <- Longest_side / 2
+      surface_area <- 4 * pi * radius^2
+      return(surface_area)
+    } else if (Shape == "Ellipsoid") {
+      a <- Longest_side / 2
+      b <- Intermediate_side / 2
+      c <- Shortest_side / 2
+      z <- 1.6075
+      surface_area <-  surface_area <- 4 * pi * ((((a / 2)^z * (b / 2)^z) + ((a / 2)^z * (c / 2)^z) + ((b / 2)^z * (c / 2)^z)) / 3)^(1/z)
+      return(surface_area)
+    } else if (Shape == "Cube" | Shape == "Box") {
+      surface_area <- 2 * (Longest_side * Intermediate_side + Intermediate_side * Shortest_side + Shortest_side * Longest_side)
+      return(surface_area)
+    } else if (Shape == "Cylindric - circular") {
+      radius <- Longest_side / 2
+      height <- Intermediate_side
+      surface_area <- (2 * radius^2 + Longest_side * Shortest_side) * pi
+      return(surface_area)
+    } else if (Shape == "Cylindric - elliptic") {
+      a <- Longest_side / 2
+      b <- Intermediate_side / 2
+      surface_area <- (pi() * (3 * (a + b) - sqrt((3 * a + b) * (a + 3 * b))) * Shortest_side) + 2 * (pi * (a * b))
+      return(surface_area)
+    } else {
+      return("Invalid Shape! Please choose from Sphere, Ellipsoid, Cube, Box, Cylindric - circular, or Cylindric - elliptic.")
+    }
+}
+
+```
+
+```{r Settling Velocity Solver, eval = FALSE}
+
+f_SetVelSolver <- function(d_eq, Psi, DynViscWaterStandard, rhoParticle, rhoWater, DragMethod, CSF) {
+  # Define the RSS function to be miDynViscWaterStandardmized
+  GN <- constants::syms$gn
+  RSS_function <- function(v_s) {
+    Re <- d_eq * v_s *rhoWater / DynViscWaterStandard
+    CD <- f_DragCoefficient (DragMethod, Re, Psi, CSF)
+    v_s_new <- sqrt(4 / 3 * d_eq / CD * ((rhoParticle - rhoWater) / rhoWater) * GN)
+    RSS <- (v_s - v_s_new) ^ 2
+    return(RSS)
+  }
+  
+  # Use numerical optimizer to minimize the RSS function
+  result <- optimize(RSS_function, interval = c(0, 1), tol = 1e-9)
+  
+  return(result$minimum)
+}
+```
+
+```{r Drag Coefficient, eval = FALSE}
+
+f_DragCoefficient <- function(DragMethod, Re, Psi, CSF) {
+  if (DragMethod == "Dioguardi" | DragMethod == "Default") {
+    term1 <- (24 / Re) * (((1 - Psi) / Re) + 1) ^ 0.25
+    term2 <- (24 / Re) * (0.1806 * Re ^ 0.6459) * Psi ^ - (Re^0.08)
+    term3 <- 0.4251 / (1 + (6880.95 / Re) * Psi ^ 5.05)
+    CD <- term1 + term2 + term3
+  } else if (DragMethod == "Swamee") {
+    term1 = 48.5 / (((1 + 4.5 * CSF ^ 0.35) ** 0.8) * (Re ^ 0.64))
+    term2 = ((Re / (Re + 100 + 100 * CSF)) ^ 0.32) * (1 / (CSF ** 18 + 1.05 * CSF ^ 0.8))
+    CD = (term1 + term2) ^ 1.25
+  } else if (DragMethod == "Stokes"){
+    CD = 24 / Re + 4 / sqrt(Re) + 0.4
+  } else {
+    stop("Invalid DragMethod! Please choose from available DragMethods.")
+  }
+  return(CD)
+}
+
+```
+
+Next, decisions needed to be made about airborne particles
+as they also include the Cunningham Slip Correction
+Coefficient. Not a lot of research is available on the
+deposition of non-spherical aerosols.
